# freebCalculate

./: MANIFEST.in  best_model.pth  build_helper.py  corel5k_model_complete.pth  pyproject.toml  readme.md
docs/: 化合物生成器.md  化合物管理器.md  四维时空坐标系统.md  天体轨道模拟.md  方程求解器.md  星图生成与读取.md  游戏NPC管理.md  相对论参考系计算.md  等高线地形图生成.md  视频插帧器.md  高程数据分析器.md  高级地形生成器.md
freebirdcal/: __init__.py  __main__.py  astro_simulator.py  contour_map.py  element_data.py  element_generate.py  element_manager.py  equation_solver.py  formula_cal.py  molecular_generator.py  npc_manager.py  number_operations.py  spacetime_coordinate.py  spacetime_event.py  terrain_generator.py  tran_corel5k.py  video_interpolator.py  zen_fractal.py
freebirdcal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
freebirdcal/freeastro/: __init__.py  astro_simulator.py  interactive_telescope.py  orbital_dynamics.py  spacetime_event.py
freebirdcal/freeelement/: __init__.py  element_generate.py  element_manager.py
freebirdcal/freeterrain/: __init__.py  elevation_analyzer.py  terrain_generator.py
test/freebirdcal/: test_equation_solver.py  test_formula_cal.py  test_npc_manager.py  test_number_operations.py  test_video_interpolator.py
test/freebirdcal/freeastro/: test_astro_simulator.py  test_interactive_telescope.py  test_orbital_dynamics.py  test_spacetime_coordinate.py  test_spacetime_event.py
